--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>bayern.steinbrecher</groupId>
     <artifactId>DialogUtility</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>jar</packaging>
 
     <name>DialogUtility</name>
@@ -179,7 +179,7 @@
         <connection>scm:git:ssh://git@github.com/TrackerSB/DialogUtility.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/TrackerSB/DialogUtility.git</developerConnection>
         <url>https://github.com/TrackerSB/DialogUtility</url>
-      <tag>HEAD</tag>
+      <tag>v0.1</tag>
   </scm>
 
     <distributionManagement>
